# IdealOS

kernel/: Cargo.toml  x86_64-kernel.json
kernel/src/: lib.rs  main.rs
kernel/src/arch/x86_64/: halt.rs  mod.rs
kernel/src/arch/x86_64/cpu/: gdt.rs  mod.rs  percpu.rs  stack.rs  tss.rs
kernel/src/arch/x86_64/interrupts/: idt.rs  mod.rs  pic.rs
kernel/src/capabilities/: mod.rs
kernel/src/debug/: log.rs  mod.rs  serial.rs
kernel/src/ipc/: mod.rs
kernel/src/mm/: mod.rs  pmm.rs  vmm.rs
kernel/src/panic/: handler.rs
kernel/src/scheduler/: context.rs  mod.rs  switch.rs  task.rs
xtask/src/: main.rs
