[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

[dependencies]
bootloader_api = "0.11"
x86_64 = "0.15"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
log = "0.4"
spin = "0.9"
